[project]
name = "jiuzhang-sdk"
version = "0.1.0a30"
description = "九章光量子真机云接入软件包（jiuzhang SDK）"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "九章量子 SDK 团队" },
]
keywords = ["quantum", "photonic", "gbs", "jiuzhang", "sdk"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3",
    "ruff>=0.6",
    "mypy>=1.11",
]
jupyter = [
    "ipython>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jiuzhang"]

[tool.hatch.build.targets.sdist]
include = [
    "src/jiuzhang",
    "tests",
    "README.md",
    "pyproject.toml",
]

# -------------------------------------------------------------------
# ruff: 格式化 + lint + import 排序 + docstring 规范
# -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming, UP: pyupgrade,
# B: flake8-bugbear, SIM: flake8-simplify, RUF: ruff-specific,
# D: pydocstyle (启用 Google 风格 docstring 校验)
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "D"]
ignore = [
    # 模块级 docstring 不强制（D100 模块、D104 包 __init__）
    "D100",
    "D104",
    # 中文 docstring 适配：句号 "。" 不被 D415 识别为结束符
    "D415",
    # 中文 docstring/字符串/注释允许使用全角标点（，。：；（））
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# 测试代码不要求 docstring
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# -------------------------------------------------------------------
# mypy: 严格类型检查
# -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

# -------------------------------------------------------------------
# pytest: 测试配置
# -------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=jiuzhang",
    "--cov-report=term-missing",
]
markers = [
    "unit: 单元测试（默认）",
    "integration: 集成测试（需要本地 Mock 或外部 HTTP 服务）",
    "slow: 慢测试（默认跳过）",
]

# -------------------------------------------------------------------
# coverage: 覆盖率配置
# -------------------------------------------------------------------
[tool.coverage.run]
source = ["jiuzhang"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
